<resources>
    <string name="app_name">Salah Time</string>
    <string name="fajr">Fajr</string>
    <string name="dhur">Dhur</string>
    <string name="asr">Asr</string>
    <string name="mag">Maghrib</string>
    <string name="esha">Esha</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title"> ~ S A L A H ~</string>
    <string name="nav_header_subtitle" translatable="false">Do not rush your Salah</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_qibla" translatable="false">Qibla</string>
    <string name="location_des">The app needs your location to calculate accurate prayer times</string>
    <string name="privacy_check">I agree to the Terms &amp; Condition and Privacy Policy of Salah Time </string>
    <string name="channel_name">SALAH TIME APP</string>
    <string name="channel_description">This channel is used to send notification from Salah Time app</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_about">About App</string>
    <string name="title_activity_qibla" translatable="false">Qibla Direction</string>
    <string name="add_number">ADD</string>
    <string-array name="Calculation_methods">
        <item>Ithna Ashari</item>
        <item>University of Islamic Sciences, Karachi</item>
        <item>Islamic Society of North America (ISNA)</item>
        <item>Muslim World League (MWL)</item>
        <item>Umm al-Qura, Makkah</item>
        <item>Egyptian General Authority of Survey</item>
        <item>Institute of Geophysics, University of Tehran</item>
    </string-array>
    <string-array name="juristic_method">
        <item>Shafii (standard)</item>
        <item>Hanafi</item>
    </string-array>
    <string-array name="higher_lat">
        <item>No Adjustment</item>
        <item>Middle of Night</item>
        <item>One Seventh of Night</item>
        <item>Angle Based</item>
    </string-array>
    <string-array name="time_format">
        <item>12 Hour</item>
        <item>24 Hour</item>
    </string-array>
    <string name="reset_time">Reset Time</string>
    <string name="startup_quote" translatable="false">When we repair our relationship with ALLAH, He repairs Everything else for us</string>
    <string name="tc" translatable="false">By downloading or using the app, these terms will automatically apply to you – you should make sure therefore that you read them carefully before using the app. You’re not allowed to copy, or modify the app, any part of the app, or our trademarks in any way. You’re not allowed to attempt to extract the source code of the app, and you also shouldn’t try to translate the app into other languages, or make derivative versions. The app itself, and all the trade marks, copyright, database rights and other intellectual property rights related to it, still belong to Khairul Bashar.\n

Khairul Bashar is committed to ensuring that the app is as useful and efficient as possible. For that reason, we reserve the right to make changes to the app or to charge for its services, at any time and for any reason. We will never charge you for the app or its services without making it very clear to you exactly what you’re paying for.\n

The Salah Time app stores and processes personal data that you have provided to us, in order to provide my Service. It’s your responsibility to keep your phone and access to the app secure. We therefore recommend that you do not jailbreak or root your phone, which is the process of removing software restrictions and limitations imposed by the official operating system of your device. It could make your phone vulnerable to malware/viruses/malicious programs, compromise your phone’s security features and it could mean that the Salah Time app won’t work properly or at all.\n

You should be aware that there are certain things that Khairul Bashar will not take responsibility for. Certain functions of the app will require the app to have an active internet connection. The connection can be Wi-Fi, or provided by your mobile network provider, but Khairul Bashar cannot take responsibility for the app not working at full functionality if you don’t have access to Wi-Fi, and you don’t have any of your data allowance left.\n

If you’re using the app outside of an area with Wi-Fi, you should remember that your terms of the agreement with your mobile network provider will still apply. As a result, you may be charged by your mobile provider for the cost of data for the duration of the connection while accessing the app, or other third party charges. In using the app, you’re accepting responsibility for any such charges, including roaming data charges if you use the app outside of your home territory (i.e. region or country) without turning off data roaming. If you are not the bill payer for the device on which you’re using the app, please be aware that we assume that you have received permission from the bill payer for using the app.\n

Along the same lines, Khairul Bashar cannot always take responsibility for the way you use the app i.e. You need to make sure that your device stays charged – if it runs out of battery and you can’t turn it on to avail the Service, Khairul Bashar cannot accept responsibility.\n

With respect to Khairul Bashar’s responsibility for your use of the app, when you’re using the app, it’s important to bear in mind that although we endeavour to ensure that it is updated and correct at all times, we do rely on third parties to provide information to us so that we can make it available to you. Khairul Bashar accepts no liability for any loss, direct or indirect, you experience as a result of relying wholly on this functionality of the app.\n

At some point, we may wish to update the app. The app is currently available on Android and iOS – the requirements for both systems (and for any additional systems we decide to extend the availability of the app to) may change, and you’ll need to download the updates if you want to keep using the app. Khairul Bashar does not promise that it will always update the app so that it is relevant to you and/or works with the iOS/Android version that you have installed on your device. However, you promise to always accept updates to the application when offered to you, We may also wish to stop providing the app, and may terminate use of it at any time without giving notice of termination to you. Unless we tell you otherwise, upon any termination, (a) the rights and licenses granted to you in these terms will end; (b) you must stop using the app, and (if needed) delete it from your device.\n</string>
    <string name="tc_change" translatable="false">I may update our Terms and Conditions from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Terms and Conditions on this page. These changes are effective immediately after they are posted on this page.</string>
    <string name="tc_contact" translatable="false">If you have any questions or suggestions about my Terms and Conditions, do not hesitate to contact me by engmkbj@gmail.com.\n \n

</string>
    <string name="pp" translatable="false">Khairul Bashar built the Salah Time app as a Free app. This SERVICE is provided by Khairul Bashar at no cost and is intended for use as is.\n

This page is used to inform website visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.\n

If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.\n

The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at Salah Time unless otherwise defined in this Privacy Policy.</string>
    <string name="pp_info_collection" translatable="false">For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information, including but not limited to Contacts, Messages, Location, Network Access. The information that I request is retained on your device and is not collected by me in any way.\n

The app does use third party services that may collect information used to identify you.\n

Link to privacy policy of third party service providers used by the app\n \n

Google Play Services</string>
    <string name="pp_log_data" translatable="false">I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.</string>
    <string name="pp_cookies" translatable="false">Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device\'s internal memory.\n

This Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.</string>
    <string name="pp_security" translatable="false">I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.</string>
    <string name="pp_links_others" translatable="false">This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.</string>
    <string name="pp_children" translatable="false">These Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13. In the case I discover that a child under 13 has provided me with personal information, I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do necessary actions.</string>
    <string name="pp_changes" translatable="false">I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.</string>
    <string name="pp_contact" translatable="false">If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me by engmkbj@gmail.com.</string>
</resources>