<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">

    <FrameLayout
        android:id="@+id/screen_area"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></FrameLayout>

    <LinearLayout
        android:id="@+id/start_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/bismillah"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/startup_quote"
            android:layout_marginHorizontal="10dp"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="10dp"
            android:textSize="18sp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/about_image"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location_des"
            android:layout_marginTop="40dp"
            android:gravity="center_horizontal"
            android:textSize="18sp"
            android:layout_marginHorizontal="15dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentBottom="true">

                <CheckBox
                    android:id="@+id/privacy_check"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:text="@string/privacy_check"
                    android:checked="true"
                    android:textColor="@color/colorPrimaryDark"
                    android:theme="@style/Autocomplete"/>
                <Button
                    android:id="@+id/button_locate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Locate Me"
                    android:textAlignment="center"
                    android:layout_marginBottom="15dp"
                    />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>