<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="true"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Terms and Condition"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:textAlignment="textStart"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tc"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="5dp"
                android:textAlignment="textStart"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Changes to this terms and conditions"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:textAlignment="textStart"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tc_change"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="5dp"
                android:textAlignment="textStart"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Contact Us"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:textAlignment="textStart"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tc_contact"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="5dp"
                android:textAlignment="textStart"/>


        </LinearLayout>



    </ScrollView>

</LinearLayout>
